# partii

./: .env.example  .gitignore  .vercelignore  RapierCollisionDocs.md  SUPABASE_SETUP.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  page.tsx
content/: changelog.json  protocolDoc.ts
games/gyrii/server/: .env.example  .env.prod.example  Cargo.toml  Dockerfile  build.rs
games/gyrii/server/src/: collision_groups.rs  combat.rs  config.rs  constants.rs  ctf.rs  game_loop.rs  main.rs  map_parser.rs  pb.rs  protocol.rs  registry.rs  stats.rs  sync.rs  weapon_config.rs  websocket.rs
games/gyrii/server/src/actions/: auth.rs  lobby.rs  mod.rs  player.rs  weapons.rs
games/gyrii/server/src/combat/weapons/: bullet.rs  mod.rs  photon_rifle.rs  shotgun.rs
games/gyrii/server/src/game_loop/: mod.rs  phases.rs
games/gyrii/server/src/physics/: map.rs  mod.rs  world.rs
games/gyrii/server/src/state/: flag.rs  lobby.rs  mod.rs  player.rs  spawn.rs
games/gyrii/server/src/ws/: action_response.rs  client_decode.rs  mod.rs
games/gyrii/spacetimedb/: Cargo.toml
games/gyrii/spacetimedb/spacetime_rapier/src/engine/: world_2d.rs  world_3d.rs
games/gyrii/spacetimedb/spacetime_rapier/src/tables/: collider.rs  mod.rs  rigid_body.rs  sensor_collision.rs
games/gyrii/spacetimedb/src/: collision_groups.rs  constants.rs  ctf.rs  game.rs  lib.rs  lobby.rs  map_parser.rs  maps.rs  player.rs
games/gyrii/spacetimedb/src/weapons/: bazooka.rs  common.rs  handler.rs  hitscan.rs  machine_gun.rs  mod.rs  photon_rifle.rs
(+464 files in other folders)
