[package]
name = "gyrii-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
rapier3d = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
